--- a/style.css
+++ b/style.css
@@ -50,3 +50,17 @@
     border-radius: 50px;
     background: #000;
 }
+
+.cell.o::before {
+    content: '';
+    position: relative;
+    display: block;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100px;
+    height: 100px;
+    border-radius: 100%;
+    border: solid 10px #000;
+    background: #fff;
+}
