--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .center {
@@ -18,8 +21,6 @@
 
 .container {
     display: grid;
-    width: 450px;
-    height: 450px;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
 }
@@ -28,6 +29,7 @@
     width: 150px;
     height: 150px;
     border: solid 2px #000;
+    cursor: pointer;
 }
 
 .cell.x::before {
@@ -82,10 +84,23 @@
 
 .win-box {
     background: #fff;
-    padding: 2em;
+    border-radius: 1em;
+    padding: 3em;
 }
 
 .win-box * {
     width: 100%;
-    padding: 1em 0.5em;
+    padding: 0.5em 1em;
+}
+
+button#restart {
+    color: #fff;
+    background: #7f7f7f;
+    border: solid 1px #000;
+    cursor: pointer;
+}
+
+button#restart:hover {
+    color: #7f7f7f;
+    background: #fff;
 }
